Add delete command, fix regex match bug